mdmCeneveo/src/objects/Party__c.object
<CustomObject>
    <fields>
        <fullName>Parent_Party__c</fullName>
        <label>Parent Party</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Id__c</fullName>
        <label>Party Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Level__c</fullName>
        <label>Party Level</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Type__c</fullName>
        <label>Party Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <label>Processing Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Party</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Party Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>